<resources>
    <string name="app_name">Canadia-android</string>
    <string name="walkthrough_skip">Skip</string>
    <string name="walkthrough_0_title">Push notification on latest Express Entry draw</string>
    <string name="walkthrough_0_discription">Get notified will all the details, you need to know about the latest CRS (Comprehensive Ranking System) cut off</string>
    <string name="walkthrough_1_title">Track your application steps</string>
    <string name="walkthrough_1_discription">Get in control of dates and time for each step and share your timeline with your friends and family</string>
    <string name="walkthrough_2_title">Stack of all the official links at one place</string>
    <string name="walkthrough_2_discription">Keep your shit together by going through all the official links at whenever you need to!</string>
    <string name="home_activity_label">Express Entry </string>
    <string name="title_item_detail">Item Detail</string>
    <string name="invitations_issued">invitations issued</string>
    <string name="tie_breaking_rule">Tie-breaking rule</string>
    <string name="filter_express_entry_data">filter</string>
    <string name="crs">Crs</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="year">Year</string>
    <string name="all">All</string>
    <string name="year_2018">2018</string>
    <string name="year_2017">2017</string>
    <string name="year_2016">2016</string>
    <string name="year_2015">2015</string>
    <string name="crs_label">CRS</string>
    <string name="lowest_csr">Lowest CSR</string>
    <string name="highest_csr">Highest CSR</string>
    <string name="filter_header">Canadia</string>
    <string name="no_filters_selected">No filters selected, press the filter button above (<annotation src="@drawable/ic_filter">&#2228;</annotation>)\n<i><annotation foregroundColor="@color/red_300">or swipe from the&#160;right</annotation></i></string>
    <string name="signup_with_google">Sign in with google</string>
    <string name="error_google_sign_in">Error authenticating with google</string>
    <string name="sign_out">Sign out</string>



    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="default_notification_channel_name">Draw update</string>
    <string name="network_failure_error">Google login failed, check your internet connections</string>


</resources>
